--- a/templates/categories.html
+++ b/templates/categories.html
@@ -17,9 +17,11 @@
       <div class="promo__wrapper">
 
         {% if saunas_list %}
-        <h1 class="heading heading--h1 heading--white">Бани из клееного бруса</h1>
+          <h1 class="heading heading--h1 heading--white">Бани из клееного бруса</h1>
         {% else %}
-        <h1 class="heading heading--h1 heading--white">Дома из клееного бруса</h1>
+          <h1 class="heading heading--h1 heading--white">
+            {{ category_header|default:"Дома из клееного бруса" }}
+          </h1>
         {% endif %}
 
         <!-- <p class="content-slider__text text text--white">Мы успешно реализовали уже {{house_count}} проектов домов из клееного бруса.</p> -->
