--- a/templates/structure-index.html
+++ b/templates/structure-index.html
@@ -34,13 +34,16 @@
       {{ category_header|default:"Дома из клееного бруса" }}
     </h1>
 
-    {% if saunas_list or houses_list %}
-      <div class="promo__buttons">
-        <a href="{% url 'houses:houses_categories' %}"
-           class="button button--white button--small button--bold">
-          ← Назад к категориям
-        </a>
-      </div>
+    {% if saunas_list %}
+      <a href="{% url 'houses:sauna_categories' %}"
+        class="button button--white button--small button--bold">
+        ← Назад к категориям
+      </a>
+    {% elif houses_list %}
+      <a href="{% url 'houses:houses_categories' %}"
+        class="button button--white button--small button--bold">
+        ← Назад к категориям
+      </a>
     {% endif %}
 
   </div>
