--- a/templates/common.html
+++ b/templates/common.html
@@ -19,6 +19,7 @@
   <link rel="manifest" href="{% static 'favicon_package/site.webmanifest' %}">
   <link rel="mask-icon" href="{% static 'favicon_package/safari-pinned-tab.svg' %}" color="#000000">
   <title>{% block title %}Дом Баня{% endblock %}</title>
+  <meta name="google-site-verification" content="ViI4fbL1Zfa9b6c-ABd4nMqrisVRCZwqxdra_uNywcM" />
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.min.css' %}">
   {% block head %}
   {% endblock head %}
@@ -90,5 +91,26 @@
 
   {% block scripts %}
   {% endblock scripts %}
+
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript" nonce="{{ CSP_NONCE }}">
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();
+    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(82386256, "init", {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true,
+          webvisor:true
+    });
+  </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/82386256" style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript>
+  <!-- /Yandex.Metrika counter -->
+
 </body>
 </html>
