update: collectstatic; add: script form.js to common, supplier.html; fix: supplier mobile version, text in templates;

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
         Дома и бани из<br>клееного&nbsp;бруса
       </h1>
       <P class="promo__text text text--white">
-        Мы сторим дома из клееного бруса для постояного проживания 
-        и делаем&nbsp;это&nbsp;качествено.
+        Мы строим дома из клееного бруса для постояного проживания 
+        и делаем&nbsp;это&nbsp;качественно.
       </P>
       <div class="promo__buttons">
         <a href="{% url 'houses:houses_categories' %}" class="button button--uppercase button--bold button--big">дома</a>
