--- a/templates/production.html
+++ b/templates/production.html
@@ -93,4 +93,9 @@
     </div>
   </article>
 </section>
+
+<div class="hr"></div>
+
+{% include "includes/supplier.html" %}
+
 {% endblock content %}
