--- a/templates/structure-detail.html
+++ b/templates/structure-detail.html
@@ -35,7 +35,7 @@
             <p class="text text--white text--left">Получите консультацию по {% if structure.class_name == 'House' %}этому дому {% else %} этой бане{% endif %}</p>
             <form action="/submit/" class="form form--house" method="POST">
               <label for="" class="form__label">
-                <input type="email" name="email" class="form__input" required>
+                <input placeholder="example@example.ru" type="email" class="form__input form__input--email" required>
                 <span class="form__placeholder">Ваш email</span>
               </label>
               <label for="" class="form__label">
@@ -43,7 +43,7 @@
                 <span class="form__placeholder">Ваше имя</span>
               </label>
               <label for="" class="form__label">
-                <input type="tel" name="phone" class="form__input" required pattern="^\+?[0-9\s\-]{7,20}$" title="Введите корректный номер телефона">
+                <input placeholder="(ххх) xxx-xx-xx" maxlength="15" type="tel" class="form__input form__input--phone" required>
                 <span class="form__placeholder">Ваш телефон</span>
               </label>
               <input type="hidden" name="form_name" value="{{structure.title}} {{structure.square}}м">
@@ -51,7 +51,7 @@
               <button type="submit" class="form__submit button button--big">Позвоните мне</button>
               {% csrf_token %}
             </form>
-            <p class="text text--white text--sm">Обработка заявки осущетствляется в течение рабочего дня. Отправляя заявку вы соглашаетесь с нашей <a href="/policy/" class="text__link text__link--alt">политикой конфиденциальности</a>.</p>
+            <p class="text text--white text--sm">Обработка заявки осущетствляется в течение рабочего дня. Отправляя заявку, вы соглашаетесь с нашей <a href="/policy/" class="text__link text__link--alt">политикой конфиденциальности</a>.</p>
           </div>
         </div>
       </div>
