--- a/templates/common.html
+++ b/templates/common.html
@@ -20,6 +20,7 @@
   <link rel="mask-icon" href="{% static 'favicon_package/safari-pinned-tab.svg' %}" color="#000000">
   <title>{% block title %}Дом Баня{% endblock %}</title>
   <meta name="google-site-verification" content="ViI4fbL1Zfa9b6c-ABd4nMqrisVRCZwqxdra_uNywcM" />
+  <meta name="yandex-verification" content="f49305fee71f40fe" />
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.min.css' %}">
   {% block head %}
   {% endblock head %}
@@ -88,6 +89,7 @@
   <script nonce="{{ CSP_NONCE }}"  src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
   <script nonce="{{ CSP_NONCE }}"  src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=3bc4a693-f065-47a8-bdd4-4c7fd4d23917" type="text/javascript"></script>
   <script nonce="{{ CSP_NONCE }}" src="{% static 'js/route-panel-control.js' %}" type="text/javascript"></script>
+  <script nonce="{{ CSP_NONCE }}" src="{% static 'js/form/form.js' %}"></script>
 
   {% block scripts %}
   {% endblock scripts %}
