add: template supplier.html, logging form errors; fix: clean_phone, template form placeholders

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -92,6 +92,9 @@
 
 {% include 'includes/list_houses.html' %}
 
+<div class="hr"></div>
+{% include "includes/supplier.html" %}
+
 {% endblock content %}
 
 {% block scripts %}
