--- a/templates/structure-detail.html
+++ b/templates/structure-detail.html
@@ -35,7 +35,7 @@
             <p class="text text--white text--left">Получите консультацию по {% if structure.class_name == 'House' %}этому дому {% else %} этой бане{% endif %}</p>
             <form action="/submit/" class="form form--house" method="POST">
               <label for="" class="form__label">
-                <input placeholder="example@example.ru" type="email" class="form__input form__input--email" required>
+                <input placeholder="example@example.ru" type="email" name="email" class="form__input form__input--email" required>
                 <span class="form__placeholder">Ваш email</span>
               </label>
               <label for="" class="form__label">
@@ -43,7 +43,7 @@
                 <span class="form__placeholder">Ваше имя</span>
               </label>
               <label for="" class="form__label">
-                <input placeholder="(ххх) xxx-xx-xx" maxlength="15" type="tel" class="form__input form__input--phone" required>
+                <input placeholder="(ххх) xxx-xx-xx" maxlength="15" name="phone" type="tel" class="form__input form__input--phone" required>
                 <span class="form__placeholder">Ваш телефон</span>
               </label>
               <input type="hidden" name="form_name" value="{{structure.title}} {{structure.square}}м">
