fix: base house description list in template

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         Дома и бани из<br>клееного&nbsp;бруса
       </h1>
       <P class="promo__text text text--white">
-        Мы строим дома из клееного бруса для постояного проживания 
+        Мы строим дома из клееного бруса для постоянного проживания 
         и делаем&nbsp;это&nbsp;качественно.
       </P>
       <div class="promo__buttons">
