--- a/templates/structure-detail.html
+++ b/templates/structure-detail.html
@@ -81,19 +81,23 @@
           Тепловой контур (базовый комплект дома) включает в себя:
         </p>
         <ul class="text text--left list list--paddingLeft-small">
-          <li>устройство фундамента,</li>
+          <li>устройство свайно-забивного фундамента,</li>
           <li>монтаж стен из клееного бруса,</li>
+          <li>использование сухого строганного пиломатериала в конструкции,</li>
           <li>монтаж балок перекрытия 1-ого и 2-ого этажа с утеплением 200 мм,</li>
           <li>монтаж стропильно-балочной системы,</li>
-          <li>металлочерепицу,</li>
-          <li>монтаж кровли с утеплением 200 мм,</li>
-          <li>обработку стен из бруса защитным составом (покраска) в два слоя,</li>
+          <li>устройство кровли — металлочерепица или мягкая кровля,</li>
+          <li>монтаж кровли с утеплением 200 мм и установкой водосточной системы,</li>
+          <li>обработку стен шлифовкой и покраской в два слоя защитным составом,</li>
           <li>обшивку свесов карнизов отделочной рейкой,</li>
-          <li>монтаж оконных и дверных блоков в комплекте с москитными сетками, ограничителями открывания, подоконниками, отливами.</li>
+          <li>монтаж пластиковых окон (профиль Rehau 70 мм, двухкамерный стеклопакет с энергосберегающим и мультифункциональным стеклом),</li>
+          <li>монтаж входной двери,</li>
+          <li>установку оконных и дверных блоков с москитными сетками, ограничителями открывания, подоконниками и отливами,</li>
+          <li>сверловку кабель-каналов под последующий монтаж электропроводки.</li>
         </ul>
       </div>
       <p class="text text--left">
-        Стоимость базового комплекта, включая материалы и работы: <b>{{ structure.cost|spaced_price }} ₽</b>.
+        Стоимость базового комплекта, включая материалы и работы: <b>{{ structure.cost|spaced_price }} руб.</b>.
       </p>
       <p class="text text--left">
         Цена под ключ зависит от индивидуальных предпочтений заказчика. Окончательную цену данного проекта Вы можете уточнить по телефону.
